--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 </div>
 
                 <div>
-                    <div>
+                    <div class="Composent_Capitilusation_General">
                         <p id="stakingapymode"></p>
                         <select id="Input_CapitalizationFrequency">
                             <option value="daily">Quotidienne</option>
