--- a/index.html
+++ b/index.html
@@ -126,18 +126,19 @@
                     <div class="Composent_Class_Selection">
                         <input type="number" placeholder="Invest (UST)" min="0" step="0.000001" id="Input_CapitalInvesi"
                             class="Composent_Class_Input">
-                        <span id="multiplicator"></span>
+                        <span id="multiplicator" class="multiplicator-indicator"></span>
                     </div>
                     <div class="Composent_Class_Selection">
                         <input type="number" placeholder="Target Price (UST)" min="0" step="0.000001"
                             id="Input_NiveauDeSortie" class="Composent_Class_Input">
                     </div>
-                    <div id="PartieStopLoss">
-                        <input type="number" placeholder="StopLoss (UST)" min="0" step="0.000001" id="Input_StopLoss">
+                    <div id="PartieStopLoss" class="stoploss-input-wrapper">
+                        <input type="number" placeholder="StopLoss (UST)" min="0" step="0.000001" id="Input_StopLoss"
+                            class="stoploss-input">
                     </div>
-                    <div>
-                        <input type="checkbox" id="Toggle_StopLoss" name="Toggle_StopLoss">
-                        <label for="Toggle_StopLoss" id="LabelTextStopLoss"></label>
+                    <div class="stoploss-input-wrapper">
+                        <input type="checkbox" id="Toggle_StopLoss" name="Toggle_StopLoss" class="stoploss-toggle">
+                        <label for="Toggle_StopLoss" id="LabelTextStopLoss" class="stoploss-toggle-label"></label>
                     </div>
                 </div>
             </div>
