--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                     <div class="Composent_Tranding_Range_General">
                         <input type="range" min="1" max="100" id="Input_RangeLevier" class="Composent_Trading_Range">
-                        <span id="Levier_Value" class="Composent_Trading_LevierValue">1</span>
+                        <span id="Levier_Value" class="Composent_Trading_LevierValue">x1</span>
                     </div>
                 </div>
 
