--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <label for="Input_Lending" class="Mode_Normal_NomMode">Lending</label>
                 <div>
                     <a href="https://twitter.com/0xLazard" target="_blank">
-                        <i></i>
+                        <i class="fab fa-twitter Normal_TwitterLogo"></i>
                     </a>
                 </div>
             </div>
