--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
                 <label for="Input_NFT" class="Mode_Normal_NomMode">NFT</label>
                 <input type="radio" id="Input_Lending" name="Choice" value="Lending" class="Mode_Normal_Radio">
                 <label for="Input_Lending" class="Mode_Normal_NomMode">Lending</label>
-                <div>
-                    <a href="https://twitter.com/0xLazard" target="_blank">
-                        <i class="fab fa-twitter Normal_TwitterLogo"></i>
-                    </a>
-                </div>
+
             </div>
+            <!-- <a href="https://twitter.com/0xLazard" target="_blank">
+                <i class="fab fa-twitter Normal_TwitterLogo"></i>
+            </a> -->
         </div>
+
+
 
 
 
