--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
             </div>
 
             <div id="AffichageDroiteID" class="AffichageDroite">
+                <div class="AffichageDiv">
                 <p id="ResultatCalcul"></p>
                 <p id="WalletBenefice"></p>
                 <p id="WalletPerte"></p>
@@ -154,6 +155,7 @@
                 <p id="Liquidation"></p>
                 <p id="RisqueReward"></p>
                 <p id="ErrorContainer"></p>
+            </div>
             </div>
 
             <div class="AffichageDeuxButton">
@@ -219,12 +221,14 @@
 
                 <div class="Composent_Capitilusation_General">
                     <p id="stakingapymode"></p>
-                    <select id="Input_CapitalizationFrequency">
+                    <div class= "select">
+                    <select id="Input_CapitalizationFrequency" >
                         <option value="daily">Quotidienne</option>
                         <option value="monthly">Mensuelle</option>
                         <option value="quarterly">Trimestrielle</option>
                         <option value="annually">Annuelle</option>
                     </select>
+                </div>
                 </div>
                 <div class="Composent_ClassBOX">
                     <div class="Composent_Class_Selection">
@@ -248,6 +252,7 @@
                 </div>
             </div>
             <div id="AffichageDroiteIDStaking" class="AffichageDroite">
+                <div class="AffichageDiv">
                 <p id="ResultatCalculStaking"></p>
                 <p id="WalletBeneficeStaking"></p>
                 <p id="CommissionStaking"></p>
@@ -256,6 +261,7 @@
                 <p id="TokensParMoisDisplay"></p>
                 <p id="TempsPourDoublerDisplay"></p>
                 <p id="ErrorContainerStaking"></p>
+            </div>
             </div>
 
             <div class="AffichageDeuxButton">
@@ -313,20 +319,22 @@
 
             </div>
             <section id="AffichageDroiteIDNFT" class="AffichageDroite">
+                <div class="AffichageDiv">
                 <p id="ResultatCalculNFT"></p>
                 <p id="WalletBeneficeNFT"></p>
                 <p id="PourcentageNFT"></p>
                 <p id="CommissionNFTenDollard"></p>
                 <p id="CommissionNFTPourcentage"></p>
                 <p id="ErrorContainerNFT"></p>
+            </div>
             </section>
 
             <div class="AffichageDeuxButton">
                 <div>
-                    <button type="button" id="Button_CalculerLesResultatsNFT">Results</button>
+                    <button type="button" id="Button_CalculerLesResultatsNFT" class="ButtonAffichageSousResult">Results</button>
                 </div>
                 <div>
-                    <button type="button" id="Button_ResetNFT">Reset</button>
+                    <button type="button" id="Button_ResetNFT" class="AffichageButtonSousReset">Reset</button>
                 </div>
             </div>
         </div>
@@ -376,14 +384,16 @@
                     </div>
                 </div>
 
-
+                
                 <div id="Wrapper_FrequenceCapitalisation" class="Composent_Capitilusation_General">
+                    <div class="select">
                     <select id="Input_FrequenceCapitalisationLendingBorrwing">
                         <option value="daily">Quotidienne</option>
                         <option value="monthly">Mensuelle</option>
                         <option value="quarterly">Trimestrielle</option>
                         <option value="annually">Annuelle</option>
                     </select>
+                </div>
                 </div>
 
                 <div id="Wrapper_Recomposition" class="Composent_AutoCompound">
@@ -410,6 +420,7 @@
                 </div>
             </div>
             <div id="AffichageDroiteIDLending" class="AffichageDroite">
+                <div class="AffichageDiv">
                 <p id="ResultatPret"></p>
                 <p id="ResultatEmprunt"></p>
                 <p id="InteretsPret"></p>
@@ -417,14 +428,15 @@
                 <p id="FraisTotal"></p>
                 <p id="ErrorContainerPretEmprunt"></p>
             </div>
+            </div>
 
 
             <div class="AffichageDeuxButton">
                 <div>
-                    <button type="button" id="Button_CalculerPretEmprunt">Results</button>
+                    <button type="button" id="Button_CalculerPretEmprunt" class="ButtonAffichageSousResult">Results</button>
                 </div>
                 <div>
-                    <button type="button" id="Button_ResetPretEmprunt">Reset</button>
+                    <button type="button" id="Button_ResetPretEmprunt" class="AffichageButtonSousReset">Reset</button>
                 </div>
             </div>
         </div>
