--- a/index.html
+++ b/index.html
@@ -146,16 +146,16 @@
 
             <div id="AffichageDroiteID" class="AffichageDroite">
                 <div class="AffichageDiv">
-                <p id="ResultatCalcul"></p>
-                <p id="WalletBenefice"></p>
-                <p id="WalletPerte"></p>
-                <p id="Pourcentage"></p>
-                <p id="PerteStopLoss"></p>
-                <p id="WalletSl"></p>
-                <p id="Liquidation"></p>
-                <p id="RisqueReward"></p>
-                <p id="ErrorContainer"></p>
-            </div>
+                    <p id="ResultatCalcul"></p>
+                    <p id="WalletBenefice"></p>
+                    <p id="WalletPerte"></p>
+                    <p id="Pourcentage"></p>
+                    <p id="PerteStopLoss"></p>
+                    <p id="WalletSl"></p>
+                    <p id="Liquidation"></p>
+                    <p id="RisqueReward"></p>
+                    <p id="ErrorContainer"></p>
+                </div>
             </div>
 
             <div class="AffichageDeuxButton">
@@ -221,14 +221,14 @@
 
                 <div class="Composent_Capitilusation_General">
                     <p id="stakingapymode"></p>
-                    <div class= "select">
-                    <select id="Input_CapitalizationFrequency" >
-                        <option value="daily">Quotidienne</option>
-                        <option value="monthly">Mensuelle</option>
-                        <option value="quarterly">Trimestrielle</option>
-                        <option value="annually">Annuelle</option>
-                    </select>
-                </div>
+                    <div class="select">
+                        <select id="Input_CapitalizationFrequency">
+                            <option value="daily">Quotidienne</option>
+                            <option value="monthly">Mensuelle</option>
+                            <option value="quarterly">Trimestrielle</option>
+                            <option value="annually">Annuelle</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="Composent_ClassBOX">
                     <div class="Composent_Class_Selection">
@@ -251,17 +251,17 @@
 
                 </div>
             </div>
-            <div id="AffichageDroiteIDStaking" class="AffichageDroite">
+            <div id="AffichageDroiteIDStaking" class="AffichageDroite class2">
                 <div class="AffichageDiv">
-                <p id="ResultatCalculStaking"></p>
-                <p id="WalletBeneficeStaking"></p>
-                <p id="CommissionStaking"></p>
-                <p id="TokensParJourDisplay"></p>
-                <p id="TokensParSemaineDisplay"></p>
-                <p id="TokensParMoisDisplay"></p>
-                <p id="TempsPourDoublerDisplay"></p>
-                <p id="ErrorContainerStaking"></p>
-            </div>
+                    <p id="ResultatCalculStaking"></p>
+                    <p id="WalletBeneficeStaking"></p>
+                    <p id="CommissionStaking"></p>
+                    <p id="TokensParJourDisplay"></p>
+                    <p id="TokensParSemaineDisplay"></p>
+                    <p id="TokensParMoisDisplay"></p>
+                    <p id="TempsPourDoublerDisplay"></p>
+                    <p id="ErrorContainerStaking"></p>
+                </div>
             </div>
 
             <div class="AffichageDeuxButton">
@@ -318,20 +318,21 @@
                 </div>
 
             </div>
-            <section id="AffichageDroiteIDNFT" class="AffichageDroite">
+            <section id="AffichageDroiteIDNFT" class="AffichageDroite class3">
                 <div class="AffichageDiv">
-                <p id="ResultatCalculNFT"></p>
-                <p id="WalletBeneficeNFT"></p>
-                <p id="PourcentageNFT"></p>
-                <p id="CommissionNFTenDollard"></p>
-                <p id="CommissionNFTPourcentage"></p>
-                <p id="ErrorContainerNFT"></p>
-            </div>
+                    <p id="ResultatCalculNFT"></p>
+                    <p id="WalletBeneficeNFT"></p>
+                    <p id="PourcentageNFT"></p>
+                    <p id="CommissionNFTenDollard"></p>
+                    <p id="CommissionNFTPourcentage"></p>
+                    <p id="ErrorContainerNFT"></p>
+                </div>
             </section>
 
             <div class="AffichageDeuxButton">
                 <div>
-                    <button type="button" id="Button_CalculerLesResultatsNFT" class="ButtonAffichageSousResult">Results</button>
+                    <button type="button" id="Button_CalculerLesResultatsNFT"
+                        class="ButtonAffichageSousResult">Results</button>
                 </div>
                 <div>
                     <button type="button" id="Button_ResetNFT" class="AffichageButtonSousReset">Reset</button>
@@ -384,16 +385,16 @@
                     </div>
                 </div>
 
-                
+
                 <div id="Wrapper_FrequenceCapitalisation" class="Composent_Capitilusation_General">
                     <div class="select">
-                    <select id="Input_FrequenceCapitalisationLendingBorrwing">
-                        <option value="daily">Quotidienne</option>
-                        <option value="monthly">Mensuelle</option>
-                        <option value="quarterly">Trimestrielle</option>
-                        <option value="annually">Annuelle</option>
-                    </select>
-                </div>
+                        <select id="Input_FrequenceCapitalisationLendingBorrwing">
+                            <option value="daily">Quotidienne</option>
+                            <option value="monthly">Mensuelle</option>
+                            <option value="quarterly">Trimestrielle</option>
+                            <option value="annually">Annuelle</option>
+                        </select>
+                    </div>
                 </div>
 
                 <div id="Wrapper_Recomposition" class="Composent_AutoCompound">
@@ -419,21 +420,22 @@
                     </div>
                 </div>
             </div>
-            <div id="AffichageDroiteIDLending" class="AffichageDroite">
+            <div id="AffichageDroiteIDLending" class="AffichageDroite class4 ">
                 <div class="AffichageDiv">
-                <p id="ResultatPret"></p>
-                <p id="ResultatEmprunt"></p>
-                <p id="InteretsPret"></p>
-                <p id="InteretsEmprunt"></p>
-                <p id="FraisTotal"></p>
-                <p id="ErrorContainerPretEmprunt"></p>
-            </div>
+                    <p id="ResultatPret"></p>
+                    <p id="ResultatEmprunt"></p>
+                    <p id="InteretsPret"></p>
+                    <p id="InteretsEmprunt"></p>
+                    <p id="FraisTotal"></p>
+                    <p id="ErrorContainerPretEmprunt"></p>
+                </div>
             </div>
 
 
             <div class="AffichageDeuxButton">
                 <div>
-                    <button type="button" id="Button_CalculerPretEmprunt" class="ButtonAffichageSousResult">Results</button>
+                    <button type="button" id="Button_CalculerPretEmprunt"
+                        class="ButtonAffichageSousResult">Results</button>
                 </div>
                 <div>
                     <button type="button" id="Button_ResetPretEmprunt" class="AffichageButtonSousReset">Reset</button>
