--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
                 <label for="Input_Lending" class="Mode_Normal_NomMode">Lending</label>
 
             </div>
-            <!-- <a href="https://twitter.com/0xLazard" target="_blank">
+            <a href="https://twitter.com/0xLazard" target="_blank" class="LogoNormal">
                 <i class="fab fa-twitter Normal_TwitterLogo"></i>
-            </a> -->
+            </a>
         </div>
-
-
 
 
 
