--- a/index.html
+++ b/index.html
@@ -119,20 +119,20 @@
 
                 <div class="Composent_ClassBOX">
                     <div class="Composent_Class_Selection">
-                        <input type="number" placeholder="Entry Price (UST)" step="10" min="0" max="100"
+                        <input type="number" placeholder="Entry Price (USDT)" step="10" min="0" max="100"
                             id="Input_Prixdentree" class="Composent_Class_Input">
                     </div>
                     <div class="Composent_Class_Selection">
-                        <input type="number" placeholder="Invest (UST)" min="0" step="0.000001" id="Input_CapitalInvesi"
-                            class="Composent_Class_Input">
+                        <input type="number" placeholder="Invest (USDT)" min="0" step="0.000001"
+                            id="Input_CapitalInvesi" class="Composent_Class_Input">
                         <span id="multiplicator" class="multiplicator-indicator"></span>
                     </div>
                     <div class="Composent_Class_Selection">
-                        <input type="number" placeholder="Target Price (UST)" min="0" step="0.000001"
+                        <input type="number" placeholder="Target Price (USDT)" min="0" step="0.000001"
                             id="Input_NiveauDeSortie" class="Composent_Class_Input">
                     </div>
                     <div id="PartieStopLoss" class="stoploss-input-wrapper">
-                        <input type="number" placeholder="StopLoss (UST)" min="0" step="0.000001" id="Input_StopLoss"
+                        <input type="number" placeholder="StopLoss (USDT)" min="0" step="0.000001" id="Input_StopLoss"
                             class="stoploss-input">
                     </div>
                     <div class="stoploss-input-wrapper">
@@ -295,12 +295,12 @@
 
                     <div class="Composent_Class_Selection">
                         <input type="number" min="0" step="0.000001" id="Input_PrixdentreeNFT"
-                            placeholder="Purchase Value (UST)" class="Composent_Class_Input">
+                            placeholder="Purchase Value (USDT)" class="Composent_Class_Input">
                     </div>
 
                     <div class="Composent_Class_Selection">
                         <input type="number" min="0" step="0.000001" id="Input_PrixdeReventeNFT"
-                            placeholder="Resal Value (UST)" class="Composent_Class_Input">
+                            placeholder="Resal Value (USDT)" class="Composent_Class_Input">
                     </div>
 
                     <div class="Composent_Class_Selection">
