--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="AffichageDeuxButton">
                 <div>
                     <button type="button" id="Button_CalculerLesResultats"
-                        class="ButtonAffichageSousResult">0xLucas</button>
+                        class="ButtonAffichageSousResult">Result</button>
                 </div>
                 <div>
                     <button type="button" id="ResetAll" class="AffichageButtonSousReset">Reset</button>
