--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link media="all" rel="stylesheet" href="./CSS/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <title>MoneyMetrics</title>
+    <title>MoneyMetrics by 0xLazard</title>
 
 </head>
 
@@ -48,11 +48,6 @@
                 <i class="fab fa-twitter Responsive-twitter-icon-menu"></i>
             </a>
         </div>
-
-
-
-
-
 
 
         <!-- 
@@ -96,9 +91,6 @@
 
                 </div>
 
-
-
-
                 <div class="Composoent_LevierButton">
                     <p id="PhraseSelection_Levier"></p>
                     <div>
@@ -141,6 +133,8 @@
                     </div>
                 </div>
             </div>
+            
+      
 
             <div id="AffichageDroiteID" class="AffichageDroite">
                 <div class="AffichageDiv">
@@ -221,11 +215,11 @@
                     <p id="stakingapymode"></p>
                     <div class="select">
                         <select id="Input_CapitalizationFrequency">
-                            <option value="daily">Quotidienne</option>
-                            <option value="monthly">Mensuelle</option>
-                            <option value="quarterly">Trimestrielle</option>
-                            <option value="annually">Annuelle</option>
-                        </select>
+                            <option value="daily">Daily</option>
+                            <option value="monthly">Monthly</option>
+                            <option value="quarterly">Quarterly</option>
+                            <option value="annually">Annually</option>
+                        </select>                        
                     </div>
                 </div>
                 <div class="Composent_ClassBOX">
